--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="col-md-6">
                               <div class="header-right">
-                                    <img width="50%" src="/img/iphone13.png" alt="iphone 13 pro" title="Extraida de tigo colombia">
+                                    <img width="50%" src="img/iphone13.png" alt="iphone 13 pro" title="Extraida de tigo colombia">
                               </div>
                         </div>
                   </div>
@@ -89,7 +89,7 @@
                   <div class="row mt-5">
                         <div class="col-md-6 mt-2">
                               <div class="info-left">
-                                    <img id="row-info" width="80%" src="/img/samsung.png" alt="samsung-s22 ultra" title="imagen extraida de notebookcheck.org">
+                                    <img id="row-info" width="80%" src="img/samsung.png" alt="samsung-s22 ultra" title="imagen extraida de notebookcheck.org">
                               </div>
                         </div>
                         <div class="col-md-6 mt-5 my-auto">
