--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   <div class="row mt-5">
                         <div class="col-md-6 mt-2">
                               <div class="info-left">
-                                    <img id="row-info" width="80%" src="img/samsung.png" alt="samsung-s22 ultra" title="imagen extraida de notebookcheck.org">
+                                    <img id="row-info" width="80%" src="img/samsung.jpg" alt="samsung-s22 ultra" title="imagen extraida de notebookcheck.org">
                               </div>
                         </div>
                         <div class="col-md-6 mt-5 my-auto">
